--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -10,9 +10,9 @@
     <strong><%= status.name %></strong>
     <p><%= status.content %></p>
     <div class="meta">
-        <%= link_to time_ago_in_words(status.created_at) + " ago", status %> |
+        <%= link_to time_ago_in_words(status.created_at) + " ago", status %>
         <span class="admin">
-            <%= link_to "Edit", edit_status_path(status) %> |
+            | <%= link_to "Edit", edit_status_path(status) %> |
             <%= link_to "Delete", status, method: :delete %>
         </span>
     </div>
